# rlm_implementation

./: .gitignore  404.html  CLEANUP_SUMMARY.md  DOCS_UPDATED.md  FILE_MIGRATION_MAP.md  HOW_TO_USE.md  MIGRATION_COMPLETE.md  PYTHON_IMPLEMENTATION.md  README.md  index.html  mkdocs.yml  pyproject.toml  quick_demo.py  rlm_config.yaml  sitemap.xml  test_counting_r.py  test_python_rlm.py  viewlog
.github/workflows/: docs.yml
benchmarks/: longbench_benchmark.py  oolong_synth_benchmark.py
development/benchmarks/: index.html
development/from-source/: index.html
docs/: index.md
docs/development/: benchmarks.md  from-source.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: configuration.md  log-viewer.md  tips.md
examples/: parallel_r_count.py  podcast.py
fast_rlm/: __init__.py  _cli.py  _runner.py
fast_rlm_py/: README.md  __init__.py  engine.py  llm_client.py  logger.py  prompts.py  ui.py  usage_tracker.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/configuration/: index.html
guide/log-viewer/: index.html
guide/tips/: index.html
sample_logs/: lex_fridman_2026-02-16T12-04-04-095Z.jsonl  longbench_hotpot_idx100_2026-02-15T22-12-31-422Z.jsonl  longbench_hotpot_idx140_2026-02-15T22-22-02-941Z.jsonl  longbench_trec_idx100_2026-02-15T22-06-14-116Z.jsonl  oolong_real_toy_dnd_idx1_2026-02-15T19-17-50-789Z.jsonl  oolong_synth_idx100_2026-02-15T21-05-04-144Z.jsonl  r_count_2026-02-22T14-56-34-865Z.jsonl
scripts/: agent_timeline.py
search/: search_index.json
tui_log_viewer/: package.json
(+1 files in other folders)
